Changes to correct mailchimp form spacing.

--- a/sites/all/themes/workingwonders/css/layout.css
+++ b/sites/all/themes/workingwonders/css/layout.css
@@ -219,7 +219,7 @@ div.mailchimp_form_wrapper {
 }
 
 div#edit-mailchimp-lists-f8e2cf1f63-EMAIL-wrapper {
-	margin: 1em 0 0 2em;
+	margin: 0 0 0 2em;
 	float: left;
 	width: 200px;
 }
@@ -490,7 +490,7 @@ div.product-left img {
 	border: 1px solid #5A8263;
 }
 div.mailchimp_form_wrapper {
-    text-align: center;
+    text-align: right;
 }
 div.signup {
         vertical-align: middle;
